--- a/duradmin/src/main/resources/messages_en.properties
+++ b/duradmin/src/main/resources/messages_en.properties
@@ -20,7 +20,8 @@ amazon_s3=Amazon S3
 amazon_glacier=Amazon Glacier
 rackspace=Rackspace
 sdsc=SDSC
-snapshot=DPN
+dpn=DPN
+chronopolis=Chronopolis
 test_verify_create=Test Verify Create
 test_verify_delete=Test Verify Delete
 test_retry=Test Retry
